// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create grid from spec and size 1`] = `
Object {
  "areas": Object {
    "chart": Object {
      "bottom": 350,
      "height": 300,
      "left": 50,
      "right": 600,
      "top": 50,
      "width": 550,
      "x": 50,
      "y": 50,
    },
    "title": Object {
      "bottom": 50,
      "height": 50,
      "left": 0,
      "right": 600,
      "top": 0,
      "width": 600,
      "x": 0,
      "y": 0,
    },
    "x_axis": Object {
      "bottom": 400,
      "height": 50,
      "left": 50,
      "right": 600,
      "top": 350,
      "width": 550,
      "x": 50,
      "y": 350,
    },
    "y_axis": Object {
      "bottom": 350,
      "height": 300,
      "left": 0,
      "right": 50,
      "top": 50,
      "width": 50,
      "x": 0,
      "y": 50,
    },
  },
  "columns": Array [
    Array [
      0,
      50,
    ],
    Array [
      50,
      600,
    ],
  ],
  "items": Array [
    Object {
      "bottom": 50,
      "height": 50,
      "left": 0,
      "right": 50,
      "top": 0,
      "width": 50,
      "x": 0,
      "y": 0,
    },
    Object {
      "bottom": 50,
      "height": 50,
      "left": 50,
      "right": 600,
      "top": 0,
      "width": 550,
      "x": 50,
      "y": 0,
    },
    Object {
      "bottom": 350,
      "height": 300,
      "left": 0,
      "right": 50,
      "top": 50,
      "width": 50,
      "x": 0,
      "y": 50,
    },
    Object {
      "bottom": 350,
      "height": 300,
      "left": 50,
      "right": 600,
      "top": 50,
      "width": 550,
      "x": 50,
      "y": 50,
    },
    Object {
      "bottom": 400,
      "height": 50,
      "left": 0,
      "right": 50,
      "top": 350,
      "width": 50,
      "x": 0,
      "y": 350,
    },
    Object {
      "bottom": 400,
      "height": 50,
      "left": 50,
      "right": 600,
      "top": 350,
      "width": 550,
      "x": 50,
      "y": 350,
    },
  ],
  "rows": Array [
    Array [
      0,
      50,
    ],
    Array [
      50,
      350,
    ],
    Array [
      350,
      400,
    ],
  ],
}
`;

exports[`should handle row and column spans 1`] = `
Object {
  "areas": Object {
    "a": Object {
      "bottom": 50,
      "height": 50,
      "left": 0,
      "right": 500,
      "top": 0,
      "width": 500,
      "x": 0,
      "y": 0,
    },
    "b": Object {
      "bottom": 350,
      "height": 300,
      "left": 0,
      "right": 50,
      "top": 50,
      "width": 50,
      "x": 0,
      "y": 50,
    },
    "c": Object {
      "bottom": 350,
      "height": 300,
      "left": 50,
      "right": 500,
      "top": 50,
      "width": 450,
      "x": 50,
      "y": 50,
    },
    "d": Object {
      "bottom": 400,
      "height": 350,
      "left": 500,
      "right": 600,
      "top": 50,
      "width": 100,
      "x": 500,
      "y": 50,
    },
    "e": Object {
      "bottom": 400,
      "height": 50,
      "left": 50,
      "right": 500,
      "top": 350,
      "width": 450,
      "x": 50,
      "y": 350,
    },
  },
  "columns": Array [
    Array [
      0,
      50,
    ],
    Array [
      50,
      500,
    ],
    Array [
      500,
      600,
    ],
  ],
  "items": Array [
    Object {
      "bottom": 50,
      "height": 50,
      "left": 0,
      "right": 50,
      "top": 0,
      "width": 50,
      "x": 0,
      "y": 0,
    },
    Object {
      "bottom": 50,
      "height": 50,
      "left": 50,
      "right": 500,
      "top": 0,
      "width": 450,
      "x": 50,
      "y": 0,
    },
    Object {
      "bottom": 50,
      "height": 50,
      "left": 500,
      "right": 600,
      "top": 0,
      "width": 100,
      "x": 500,
      "y": 0,
    },
    Object {
      "bottom": 350,
      "height": 300,
      "left": 0,
      "right": 50,
      "top": 50,
      "width": 50,
      "x": 0,
      "y": 50,
    },
    Object {
      "bottom": 350,
      "height": 300,
      "left": 50,
      "right": 500,
      "top": 50,
      "width": 450,
      "x": 50,
      "y": 50,
    },
    Object {
      "bottom": 350,
      "height": 300,
      "left": 500,
      "right": 600,
      "top": 50,
      "width": 100,
      "x": 500,
      "y": 50,
    },
    Object {
      "bottom": 400,
      "height": 50,
      "left": 0,
      "right": 50,
      "top": 350,
      "width": 50,
      "x": 0,
      "y": 350,
    },
    Object {
      "bottom": 400,
      "height": 50,
      "left": 50,
      "right": 500,
      "top": 350,
      "width": 450,
      "x": 50,
      "y": 350,
    },
    Object {
      "bottom": 400,
      "height": 50,
      "left": 500,
      "right": 600,
      "top": 350,
      "width": 100,
      "x": 500,
      "y": 350,
    },
  ],
  "rows": Array [
    Array [
      0,
      50,
    ],
    Array [
      50,
      350,
    ],
    Array [
      350,
      400,
    ],
  ],
}
`;
